--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,75 @@
     padding: 0;
     box-sizing: border-box;
 }
+.debug{
+    border: 1px solid black;
+}
+body{
+    font-family: Whitney,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-size: 20px;
+    color: #23272a;
+}
+.container{
+    width:90%;
+    margin:0 auto;
+}
+.clearfix:after{
+    content: '';
+    display:table;
+    clear: both;
+}
+.btn {
+    display: inline-block;
+    border-radius: 40px;
+    padding: 16px 32px;
+    background-color: #8ea1e1;
+    color: #fff;
+    text-decoration: none;
+}
+
+/* header */
+header{
+    height:80px;
+    line-height: 80px;
+    background-color: rgba(49,97,224,255);
+}
+nav .logo, nav ul{
+    float:left;
+}
+nav .logo img{
+    vertical-align: middle;
+}
+nav .logo{
+    width:15%;
+}
+nav ul{
+    list-style-type: none;
+    width: 70%;
+    text-align: center;    
+}
+nav ul li{
+    display: inline-block;
+}
+#accedi{
+    float:right;
+    width: 15%;
+}
+#accedi .btn{
+    padding: 10px 14px;
+    background-color: #fff;
+    font-size: 14px;
+    color: #23272a;
+    display: inline;
+}
+/* main */
+#jumbotron{
+    min-height: 546px;
+    background-image: url(../img/jumbo.png);
+    background-size: cover;
+}
+#jumbotron .container{
+    max-width: 780px;
+    text-align: center;
+    color: #ffffff;
+    padding-top:100px;
+}
